# ipyaladin

./: .buildinfo  .gitignore  .prettierignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  basic_instantiation.ipynb  compile.sh  environment.yml  genindex.html  index.html  install.json  ipyaladin.json  objects.inv  package-lock.json  package.json  playwright.config.js  postBuild  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs-tests.yml  codestyle-check.yml  js-tests.yml  npm-publish.yml  publish-docs.yml  python-publish.yml  python-tests.yml  refresh-snapshots.yml
_collections/notebooks/: 01_Getting_Started.html  01_Getting_Started.ipynb  02_Base_Commands.html  02_Base_Commands.ipynb  03_Functions.html  03_Functions.ipynb  04_Importing_Tables.html  04_Importing_Tables.ipynb  05_Display_a_MOC.html  05_Display_a_MOC.ipynb  06_Linked-widgets.html  06_Linked-widgets.ipynb  07_on-click-callback.html  07_on-click-callback.ipynb  08_Rectangular-selection.html  08_Rectangular-selection.ipynb  09_Displaying_Shapes.html  09_Displaying_Shapes.ipynb  10_Advanced-GUI.html  10_Advanced-GUI.ipynb  11_Extracting_information_from_the_view.html  12_Planetary_surveys.html
_modules/: index.html
_modules/ipyaladin/: widget.html
_sources/_collections/notebooks/: 02_Base_Commands.ipynb.txt  04_Importing_Tables.ipynb.txt  07_on-click-callback.ipynb.txt  09_Displaying_Shapes.ipynb.txt  10_Advanced-GUI.ipynb.txt  12_Planetary_surveys.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/ipyaladin/: index.rst.txt
_sources/autoapi/ipyaladin/widget/: index.rst.txt
_sources/community/: community.md.txt
_sources/user_documentation/: user_documentation.rst.txt
_static/: pygments.css
autoapi/: index.html
autoapi/ipyaladin/: index.html
autoapi/ipyaladin/widget/: index.html
binder/: postBuild  requirements.txt
community/: community.html
conda-recipe/: meta.yaml  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh  readme
docs/: conf.py  index.md
docs/community/: community.md
docs/getting_started/: getting_started.rst
docs/user_documentation/: init_options.csv  user_documentation.rst
examples/: 01_Getting_Started.ipynb  02_Base_Commands.ipynb  03_Functions.ipynb  04_Importing_Tables.ipynb  05_Display_a_MOC.ipynb  08_Rectangular-selection.ipynb  09_Displaying_Shapes.ipynb  10_Advanced-GUI.ipynb  11_Extracting_information_from_the_view.ipynb  11_Values_Recovery.ipynb  12_Planetary_surveys.ipynb  1_Getting_Started.ipynb  2_Base_Commands.ipynb  3_Functions.ipynb  4_Importing_Tables.ipynb  5_Display_a_MOC.ipynb  6_Linked-widgets.ipynb  7_on-click-callback.ipynb  8_Rectangular-selection.ipynb  9_Footprints_from_STCS.ipynb  9_Shapes.ipynb  advanced-GUI.ipynb  ipyaladin_example_1.ipynb  ipyaladin_hello_world.ipynb
examples/.ipynb_checkpoints/: ipyaladin_hello_world-checkpoint.ipynb
examples/images/: m31.fits
getting_started/: getting_started.html
ipyaladin/: __init__.py  _version.py  aladin_widget.py
ipyaladin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipyaladin/static/: 1.index.js  1.index.js.map  extension.js  index.js  index.js.map
js/: README.md  aladin_lite.js  amd-public-path.js  imports.js  package-lock.json  package.json  utils.js  webpack.config.js  widget.css  widget.js
js/lib/: aladin_lib.js  extension.js  index.js  jupyter-aladin.js  labplugin.js
js/models/: event_handler.js  message_handler.js
js/src/: aladin_lib.js  embed.js  extension.js  index.js  jupyter-aladin.js  jupyterlab-plugin.js
js/ui-tests/: README.md  examples.spec.js  jupyter_server_test_config.py
src/ipyaladin/: __about__.py  __init__.py  aladin.py  converter.py  coordinate_parser.py  region_converter.py  widget.py
src/ipyaladin/elements/: error_shape.py  marker.py
src/ipyaladin/overlays/: overlay.py  overlay_manager.py
src/ipyaladin/static/: widget.css  widget.js
src/ipyaladin/utils/: _coordinate_parser.py  _region_converter.py  call_store.py  coordinate_parser.py  exceptions.py  marker.py
src/test/: test_aladin.py  test_coordinate_parser.py
src/tests/: test_aladin.py  test_elements.py  test_overlay_manager.py  test_overlays_update.py
user_documentation/: user_documentation.html
