[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyaladin"
dynamic = ["version"]
dependencies = ["anywidget"]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.version]
path = "src/ipyaladin/__about__.py"

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyaladin/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyaladin/static/widget.js"]
skip-if-exists = ["src/ipyaladin/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.ruff]
fix = true
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["E", "W", "YTT", "ASYNC", "BLE", "B", "A",
                 "C4", "ISC", "PIE", "PYI", "RSE", "RET", "SIM",
                 "PTH", "TD", "ERA", "PL", "PERF", "RUF", "ARG"
                ]
ignore = ["ISC001"]

[tool.ruff.format]
docstring-code-format = false
